--- a/.env.template
+++ b/.env.template
@@ -1,1 +1,8 @@
 CLIENT_GATEWAY_PORT=3000
+
+PAYMENTS_MS_PORT=3003
+STRIPE_SECRET=
+STRIPE_SUCCESS_URL=http://localhost:3003/payments/success
+STRIPE_CANCEL_URL=http://localhost:3003/payments/cancel
+#https://dashboard.stripe.com/acct_1SEHHLFnLiETQNGw/test/workbench/inspector
+STRIPE_ENDPOINT_SECRET=
