add auth-ms submodule, update environment variables in .env.template, and enhance docker-compose files for production

--- a/.env.template
+++ b/.env.template
@@ -6,3 +6,6 @@ STRIPE_SUCCESS_URL=http://localhost:3003/payments/success
 STRIPE_CANCEL_URL=http://localhost:3003/payments/cancel
 #https://dashboard.stripe.com/acct_1SEHHLFnLiETQNGw/test/workbench/inspector
 STRIPE_ENDPOINT_SECRET=
+AUTH_DATABASE_URL=mongodb+srv://******:******@auth-microservice-db.qlh23rm.mongodb.net/AuthDB
+JWT_SECRET=OtroPalabraSecretaParaJWTs
+ORDERS_DATABASE_URL=postgresql://
