--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,7 +7,7 @@ services:
     build:
       context: ./client-gateway
       dockerfile: dockerfile.prod
-    image: client-gateway-prod
+    image: southamerica-east1-docker.pkg.dev/microservicios-474900/image-registry/client-gateway
     ports:
       - ${CLIENT_GATEWAY_PORT}:${CLIENT_GATEWAY_PORT}
     environment:
@@ -18,7 +18,7 @@ services:
     build:
       context: ./auth-ms
       dockerfile: dockerfile.prod
-    image: auth-ms-prod
+    image: southamerica-east1-docker.pkg.dev/microservicios-474900/image-registry/auth-ms
     volumes:
       - ./auth-ms/src:/usr/src/app/src
     environment:
@@ -31,7 +31,7 @@ services:
     build:
      context: ./products-ms
      dockerfile: dockerfile.prod
-    image: products-ms-prod
+    image: southamerica-east1-docker.pkg.dev/microservicios-474900/image-registry/products-ms
     volumes:
       - ./products-ms/src:/usr/src/app/src
     environment:
@@ -45,7 +45,7 @@ services:
      dockerfile: dockerfile.prod
      args:
       - ORDERS_DATABASE_URL=${ORDERS_DATABASE_URL}
-    image: orders-ms-prod
+    image: southamerica-east1-docker.pkg.dev/microservicios-474900/image-registry/orders-ms
     volumes:
       - ./orders-ms/src:/usr/src/app/src
     environment:
@@ -71,7 +71,7 @@ services:
     build:
       context: ./payments-ms
       dockerfile: dockerfile.prod
-    image: payments-ms-prod
+    image: southamerica-east1-docker.pkg.dev/microservicios-474900/image-registry/payments-ms
     volumes:
       - ./payments-ms/src:/usr/src/app/src
     ports:
